src/test/ui/hr-subtype/hr-subtype.free_inv_x_vs_free_inv_y.nll.stderr
error: lifetime may not live long enough
  --> $DIR/hr-subtype.rs:33:13
   |
LL |           fn subtype<'x,'y:'x,'z:'y>() {
   |                      -- -- lifetime `'y` defined here
   |                      |
   |                      lifetime `'x` defined here
LL |               gimme::<$t2>(None::<$t1>);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ argument requires that `'x` must outlive `'y`
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation

error: lifetime may not live long enough
  --> $DIR/hr-subtype.rs:39:13
   |
LL |           fn supertype<'x,'y:'x,'z:'y>() {
   |                        -- -- lifetime `'y` defined here
   |                        |
   |                        lifetime `'x` defined here
LL |               gimme::<$t1>(None::<$t2>);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ argument requires that `'x` must outlive `'y`
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation

error: aborting due to 2 previous errors

